# BunNES

./: .gitignore  Cargo.toml
bunNES/: Cargo.toml
bunNES/src/: emulator.rs  lib.rs  main.rs
bunNES/src/nes/: bus.rs  cpu.rs  mod.rs  opcodes.rs  ppu.rs  rom.rs
bunNES/src/tests/: mod.rs  opcode_test.rs
bunNES/src/tests/opcodes/: lda.rs  mod.rs
bunNES/tests/: mod.rs
bunNES/tests/opcodes/: arithmetic.rs  jump.rs  lda_tests.rs  ldx_tests.rs  load.rs  logic.rs  misc.rs  mod.rs
gui-test/: Cargo.toml
gui-test/src/: main.rs
src/: bus.rs  cpu.rs  emulator.rs  gui.rs  lib.rs  main.rs  opcodes.rs  ppu.rs
src/cpu/: instructions.rs  opcode.rs  opcode.test.rs
src/nes/: bus.rs  cpu.rs  opcodes.rs  ppu.rs  rom.rs
src_old/: main.rs
src_old/cpu/: cpu.rs  instructions.rs  mod.rs  opcode.rs
tools/: gen_opcodes.ts
