[package]
name = "BunNES"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit = "0.1.1"
egui = "0.22"
egui-wgpu = "0.22"
egui-winit = { version = "0.22", default-features = false, features = ["links"] }
pixels = "0.13.0"
winit = "0.28"
winit_input_helper = "0.14"
